2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* nfs.h: Add #include <sys/mman.h> for munmap decl.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* ops.c (netfs_get_dirents): Use mmap instead of vm_allocate.
	* pager.c (pager_read_page): Likewise.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* ops.c (netfs_get_dirents): Use munmap instead of vm_deallocate.
	* pager.c (pager_read_page): Likewise.

1999-02-01  Mark Kettenis  <kettenis@phys.uva.nl>

	* ops.c: Include <maptime.h>.
	(netfs_attempt_utimes): Fix various typo's.

Sun Jan 31 18:39:09 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* nfs.c (xdr_encode_sattr_times): Convert nanoseconds to
	microseconds correctly.

	* ops.c (netfs_attempt_utimes): Handle new possibility that ATIME
	or MTIME might be null.

1999-01-22  Roland McGrath  <roland@baalperazim.frob.com>

	* ops.c (netfs_attempt_link): Remove major, minor macro definitions.
	* nfs.c (xdr_decode_fattr): Remove makedev macro definition.

1998-07-20  Roland McGrath  <roland@baalperazim.frob.com>

	* mount.c (mount_root): Make perror explanation strings consistent.

	* mount.c (pmap_initialize_rpc): Make static.
	(mount_initialize_rpc): Likewise.

Wed Aug 20 14:31:03 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ops.c (netfs_attempt_link): Implement EXCL == 0 case.
	(netfs_attempt_rename): Implement EXCL != 0 case.

	* pager.c (netfs_get_filemap): If pager_create fails, return
	error to caller.

Wed Aug  6 15:23:03 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ops.c (netfs_attempt_unlink): Purge cache-held references
 	*before* counting live references.  Use new function.
	* name-cache.c (purge_lookup_cache_node): New function.